<resources>
    <string name="app_name">Pizza Planet</string>
    <string name="txt_bienvenido_login">Bienvenido a Bordo</string>
    <string name="txt_iniciar_sesion">Iniciar Sesión</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_inicio">Iniciar Sesión</string>
    <string name="txt_continuar">Continuar</string>
    <string name="txt_aviso">Al iniciar sesión aceptas los términos y condiciones y políticas de privacidad.</string>
    <string name="txt_correo">Correo Electrónico</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_olvidar_contraseña">¿Olvidó su contraseña?</string>
    <string name="rb_mantenerSesion">Mantener Sesión Abierta</string>
    <string name="txt_registrarse_inicio_sesion">¿Aún no tienes una cuenta?</string>
    <string name="txt_registrarse_button">Regístrate</string>
    <string name="txt_inicio_sesion_registrarse">¿Ya tienes una cuenta? </string>
    <string name="txt_iniciar_sesion_button">Inicia Sesión </string>
    <string name="txt_contraseña_sugerencia">Ingresa una contraseña que contenga al menos 8 caracteres.</string>
    <string name="txt_header_mipedido">Confirmar Pedido</string>
    <string name="txt_Header_direccion">Direccion de entrega:</string>
    <string name="txt_userinfo">Calle ## Colonia, C.P.</string>
    <string name="txt_deliveryMethod">Método de entrega</string>
    <string name="txt_meetAtDoor">Entrega en puerta</string>
    <string name="txt_paymentMethod">Método de pago:</string>
    <string name="txt_cashMethod">Efectivo</string>
    <string name="txt_utensils">Incluir catsup y salsa</string>
    <string name="txt_tip">Propina:</string>
    <string name="txt_confirmar">Confirmar</string>
    <string name="txt_tipMessage">Muestra tu apoyo con tu propina. Los mensajeros reciben el 100% de las propinas.</string>
    <string name="bt_tip10">$10</string>
    <string name="bt_tip20">$20</string>
    <string name="bt_tip30">$30</string>
    <string name="bt_tipOther">MX$0.00</string>
    <string name="txt_paymenthDetails">Detalles de pago:</string>
    <string name="txt_itemTotal">Total de artículos</string>
    <string name="txt_itemTotalValue">MX$178.00</string>
    <string name="txt_deliveryFee">Tarifa de entrega</string>
    <string name="txt_deliveryFeeValue">MX$48.00</string>
    <string name="txt_coupons">Planet Cupones</string>
    <string name="txt_couponMessage">Actualmente no disponible</string>
    <string name="txt_Total">Total:</string>
    <string name="txt_TotalValue">MX$226.00</string>
    <string name="txt_saved">MX$178.00</string>
    <string name="txt_next">Siguiente</string>
    <string name="menu_drawer">Pizza Planet</string>
    <string name="support">Support</string>
    <string name="question">About Us</string>
    <string name="rights">© 2023 Facultad de Ciencias - UNAM </string>
    <string-array name="cantidad_pizza">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="metodo_pago">
        <item>Efectivo</item>
        <item>TDD/TDC</item>
    </string-array>
    <string name="TituloPiiza1">Pizza Italiana</string>
    <string name="TituloPiiza2">Pizza Salami</string>
    <string name="TituloPiiza3">Pizza Vegetariana</string>
    <string name="PrecioPiiza1">$250</string>
    <string name="PrecioPiiza2">$300</string>
    <string name="PrecioPiiza3">$350</string>
    <string name="BotonOrdenar">Ordenar</string>
    <string name="TituloElige">Elige tu pizza:</string>
    <string name="bt_drawer_login">Iniciar Sesión</string>
    <string name="bt_actionbar_register">Registrarse</string>
    <string name="bt_actionbar_login">Iniciar Sesión</string>
    <string name="bt_drawer_menu">Menú</string>
    <string name="bt_drawer_cart">Pedidos</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu_inicio">MenuInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pizza Planet</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="privacy">Privacy &amp; Terms</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="copyright">© 2023 Facultad de Ciencias - UNAM</string>
    <string name="politics">Facultad de Ciencias built the Pizza Planet app as a Free app. This SERVICE is provided by Facultad de Ciencias at no cost and is intended for use as is.
        If you choose to use our service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Pizza Planet unless otherwise defined in this Privacy Policy.</string>

    <string name="txt_headerSummary">Resumen de compra:</string>
    <string name="txt_orderSample">1\t\tPizza Italiana\t\t\t\t\t\t\t$150\n2\t\tPizzas Salami\t\t\t\t\t$200\n3\t\tPizzas Vegetarianas\t$250</string>
</resources>
