<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/r"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_inicio"
        android:layout_width="180dp"
        android:layout_height="41dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/louis_george_rg"
        android:importantForAccessibility="no"
        android:text="@string/txt_inicio"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email_login"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:fontFamily="@font/louis_george_rg"
        android:hint="@string/txt_correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_inicio"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txt_password_login"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_lock"
        android:ems="10"
        android:fontFamily="@font/louis_george_rg"
        android:hint="@string/txt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:shadowColor="#00FFFFFF"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_login" />

    <TextView
        android:id="@+id/txt_olvidar_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="223dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_olvidar_contraseña"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_login" />

    <Button
        android:id="@+id/bt_login_start"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/louis_george_rg"
        android:text="@string/txt_continuar"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/txt_aviso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_aviso"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="57dp"
        android:fontFamily="@font/louis_george_rg"
        android:gravity="center"
        android:text="@string/txt_aviso"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login_start" />

    <TextView
        android:id="@+id/txt_registrarse_inicio_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="62dp"
        android:fontFamily="@font/louis_george_rg"
        android:text="@string/txt_registrarse_inicio_sesion"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_registrarse_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_registrarse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="62dp"
        android:fontFamily="@font/louis_george_rg"
        android:text="@string/txt_registrarse_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>